--- a/public/locales/zh-CN.json
+++ b/public/locales/zh-CN.json
@@ -42,6 +42,7 @@
     "SystemConfig.start": "#### SystemConfig ####",
     "SystemConfig.lang": "选择语言",
     "SystemConfig.tree.split": "设置分隔符",
+    "SystemConfig.auto.format.json": "自动格式化json",
     "SystemConfig.title": "系统配置",
     "SystemConfig.needRestart": "您需要重新启动才能生效。",
     "SystemConfig.end00": "#### SystemConfig ####",
