--- a/public/locales/pt.json
+++ b/public/locales/pt.json
@@ -38,6 +38,8 @@
     "QuickMonacoEditor.format": "Format json",
     "QuickMonacoEditor.delformat": "Excluir espaços json",
     "QuickMonacoEditor.end00": "#### QuickMonacoEditor ####",
+    "QuickMonacoEditor.gzip": "Compression GZip",
+    "QuickMonacoEditor.ungzip": "Dekompression GZip",
 
     "SystemConfig.start": "#### SystemConfig ####",
     "SystemConfig.lang": "Selecione o idioma",
